--- a/package.json
+++ b/package.json
@@ -6,15 +6,30 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
-    "@types/jest": "^26.0.15",
-    "@types/node": "^12.0.0",
-    "@types/react": "^17.0.0",
-    "@types/react-dom": "^17.0.0",
+    "i18next": "^20.2.4",
+    "i18next-browser-languagedetector": "^6.1.1",
+    "i18next-http-backend": "^1.2.4",
+    "i18next-xhr-backend": "^3.2.2",
+    "luxon": "^1.27.0",
+    "moment-jalaali": "^0.9.2",
+    "node-sass": "^6.0.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-i18next": "^11.8.15",
+    "react-icons": "^4.2.0",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.3",
+    "react-spinners": "^0.11.0",
+    "react-toastify": "^7.0.4",
+    "sass": "^1.34.1",
+    "tslint": "^6.1.3",
     "typescript": "^4.1.2",
-    "web-vitals": "^1.0.1"
+    "web-vitals": "^1.0.1",
+    "@types/luxon": "^1.26.5",
+    "@types/moment-jalaali": "^0.7.4",
+    "@types/react": "^17.0.3",
+    "@types/react-dom": "^17.0.9",
+    "@types/react-router-dom": "^5.1.7"
   },
   "scripts": {
     "start": "react-scripts start",
